--- a/eDnevnik.MOBILE/eDnevnik.MOBILE/IzostanciPage.xaml
+++ b/eDnevnik.MOBILE/eDnevnik.MOBILE/IzostanciPage.xaml
@@ -1,14 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:eDnevnik.MOBILE"
-             x:Class="eDnevnik.MOBILE.MainPage"
-             >
-
-
+             x:Class="eDnevnik.MOBILE.IzostanciPage">
     <ContentPage.Content>
         <StackLayout Margin="15">
-            <ListView x:Name="obavijestiList" ItemTapped="obavijestiList_ItemTapped">
+            <ListView x:Name="izostanciList">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
@@ -20,13 +16,12 @@
 
 
                                 <StackLayout>
-                                    <Label Text="{Binding Naslov}" FontAttributes="Bold"></Label>
-                                    <Label Text="{Binding Sadrzaj}" ></Label>
                                     <StackLayout Orientation="Horizontal">
-                                        <Label Text="{Binding Datum} " ></Label>
-                                        <Label Text="{Binding Predmet, StringFormat='{0} napisao/la'}"></Label>
-                                        <Label Text="{Binding Nastavnik}" ></Label>
-                                    </StackLayout>                                    
+                                        <Label Text="{Binding Predmet , StringFormat='{0} ('} " FontAttributes="Bold" FontSize="16" ></Label>
+                                        <Label Text="{Binding BrojSati, StringFormat='{0} )'} " FontAttributes="Bold" FontSize="16"></Label>
+                                    </StackLayout>
+                                    <Label Text="{Binding Opravdano}" ></Label>
+                                    <Label Text="{Binding Datum}" ></Label>
                                 </StackLayout>
                             </Grid>
                         </ViewCell>
@@ -35,5 +30,4 @@
             </ListView>
         </StackLayout>
     </ContentPage.Content>
-
 </ContentPage>
