--- a/eDnevnik.MOBILE/eDnevnik.MOBILE/MaterijaliPage.xaml
+++ b/eDnevnik.MOBILE/eDnevnik.MOBILE/MaterijaliPage.xaml
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="eDnevnik.MOBILE.PredmetiPage">
-
+             x:Class="eDnevnik.MOBILE.MaterijaliPage">
 
     <ContentPage.Content>
-        <StackLayout Margin="15">
-            <ListView x:Name="predmetiList" ItemTapped="predmetiList_ItemTapped">
+        <StackLayout Padding="30">
+            <Picker x:Name="predmetiPicker" Title="Odaberite predmet" SelectedIndexChanged="predmetiPicker_SelectedIndexChanged"></Picker>
+
+
+            <ListView x:Name="materijaliList" ItemTapped="materijaliList_ItemTapped">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
@@ -19,7 +21,6 @@
 
                                 <StackLayout>
                                     <Label Text="{Binding Naziv}" FontAttributes="Bold" FontSize="20"></Label>
-                                    <Label Text="{Binding Nastavnik}" ></Label>                                    
                                 </StackLayout>
                             </Grid>
                         </ViewCell>
