--- a/eDnevnik.UI/Reports/UceniciURazredu.rdlc
+++ b/eDnevnik.UI/Reports/UceniciURazredu.rdlc
@@ -6,19 +6,60 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>7.24486cm</Width>
+              <Width>2.15625in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>6.84799cm</Width>
+              <Width>2.11458in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>4.05757cm</Width>
+              <Width>1.23437in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
             <TablixRow>
-              <Height>0.6cm</Height>
+              <Height>0.25in</Height>
               <TablixCells>
+                <TablixCell>
+                  <CellContents>
+                    <Textbox Name="Textbox5">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value>Ime</Value>
+                              <Style>
+                                <FontSize>11pt</FontSize>
+                                <FontWeight>Bold</FontWeight>
+                                <Color>#666666</Color>
+                              </Style>
+                            </TextRun>
+                          </TextRuns>
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>Textbox5</rd:DefaultName>
+                      <Style>
+                        <Border>
+                          <Style>None</Style>
+                        </Border>
+                        <BottomBorder>
+                          <Color>LightGrey</Color>
+                          <Style>Solid</Style>
+                          <Width>1pt</Width>
+                        </BottomBorder>
+                        <BackgroundColor>White</BackgroundColor>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
                 <TablixCell>
                   <CellContents>
                     <Textbox Name="Textbox2">
@@ -28,7 +69,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>Datum</Value>
+                              <Value>Prezime</Value>
                               <Style>
                                 <FontSize>11pt</FontSize>
                                 <FontWeight>Bold</FontWeight>
@@ -69,7 +110,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>Ucenik</Value>
+                              <Value>Razred</Value>
                               <Style>
                                 <FontSize>11pt</FontSize>
                                 <FontWeight>Bold</FontWeight>
@@ -101,62 +142,21 @@
                     </Textbox>
                   </CellContents>
                 </TablixCell>
-                <TablixCell>
-                  <CellContents>
-                    <Textbox Name="Textbox5">
-                      <CanGrow>true</CanGrow>
-                      <KeepTogether>true</KeepTogether>
-                      <Paragraphs>
-                        <Paragraph>
-                          <TextRuns>
-                            <TextRun>
-                              <Value>Ocjena</Value>
-                              <Style>
-                                <FontSize>11pt</FontSize>
-                                <FontWeight>Bold</FontWeight>
-                                <Color>#666666</Color>
-                              </Style>
-                            </TextRun>
-                          </TextRuns>
-                          <Style>
-                            <TextAlign>Center</TextAlign>
-                          </Style>
-                        </Paragraph>
-                      </Paragraphs>
-                      <rd:DefaultName>Textbox5</rd:DefaultName>
-                      <Style>
-                        <Border>
-                          <Style>None</Style>
-                        </Border>
-                        <BottomBorder>
-                          <Color>LightGrey</Color>
-                          <Style>Solid</Style>
-                          <Width>1pt</Width>
-                        </BottomBorder>
-                        <BackgroundColor>White</BackgroundColor>
-                        <PaddingLeft>2pt</PaddingLeft>
-                        <PaddingRight>2pt</PaddingRight>
-                        <PaddingTop>2pt</PaddingTop>
-                        <PaddingBottom>2pt</PaddingBottom>
-                      </Style>
-                    </Textbox>
-                  </CellContents>
-                </TablixCell>
               </TablixCells>
             </TablixRow>
             <TablixRow>
-              <Height>0.6cm</Height>
+              <Height>0.25in</Height>
               <TablixCells>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="Datum">
+                    <Textbox Name="Ime">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!Datum.Value</Value>
+                              <Value>=Fields!Ime.Value</Value>
                               <Style>
                                 <FontWeight>Normal</FontWeight>
                                 <Color>#333333</Color>
@@ -168,7 +168,7 @@
                           </Style>
                         </Paragraph>
                       </Paragraphs>
-                      <rd:DefaultName>Datum</rd:DefaultName>
+                      <rd:DefaultName>Ime</rd:DefaultName>
                       <Style>
                         <Border>
                           <Style>None</Style>
@@ -184,14 +184,14 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="Ucenik">
+                    <Textbox Name="Prezime">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!Ucenik.Value</Value>
+                              <Value>=Fields!Prezime.Value</Value>
                               <Style>
                                 <FontWeight>Normal</FontWeight>
                                 <Color>#333333</Color>
@@ -203,7 +203,7 @@
                           </Style>
                         </Paragraph>
                       </Paragraphs>
-                      <rd:DefaultName>Ucenik</rd:DefaultName>
+                      <rd:DefaultName>Prezime</rd:DefaultName>
                       <Style>
                         <Border>
                           <Style>None</Style>
@@ -219,14 +219,14 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="OcjenaVrijednost">
+                    <Textbox Name="Razred">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!OcjenaVrijednost.Value</Value>
+                              <Value>=Fields!Razred.Value</Value>
                               <Style>
                                 <FontWeight>Normal</FontWeight>
                                 <Color>#333333</Color>
@@ -238,7 +238,7 @@
                           </Style>
                         </Paragraph>
                       </Paragraphs>
-                      <rd:DefaultName>OcjenaVrijednost</rd:DefaultName>
+                      <rd:DefaultName>Razred</rd:DefaultName>
                       <Style>
                         <Border>
                           <Style>None</Style>
@@ -273,11 +273,10 @@
             </TablixMember>
           </TablixMembers>
         </TablixRowHierarchy>
-        <DataSetName>OcjenaVM</DataSetName>
-        <Top>0cm</Top>
-        <Left>0cm</Left>
-        <Height>1.2cm</Height>
-        <Width>18.15042cm</Width>
+        <DataSetName>UcenikVM</DataSetName>
+        <Top>0.55208in</Top>
+        <Height>0.5in</Height>
+        <Width>5.50521in</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -285,13 +284,13 @@
         </Style>
       </Tablix>
     </ReportItems>
-    <Height>1.13911in</Height>
+    <Height>1.58333in</Height>
     <Style />
   </Body>
-  <Width>7.14583in</Width>
+  <Width>5.50521in</Width>
   <Page>
     <PageHeader>
-      <Height>2.54cm</Height>
+      <Height>1in</Height>
       <PrintOnFirstPage>true</PrintOnFirstPage>
       <PrintOnLastPage>true</PrintOnLastPage>
       <ReportItems>
@@ -302,7 +301,7 @@
             <Paragraph>
               <TextRuns>
                 <TextRun>
-                  <Value>Ocjene ucenika</Value>
+                  <Value>Ucenici</Value>
                   <Style>
                     <FontSize>16pt</FontSize>
                     <FontWeight>Bold</FontWeight>
@@ -315,8 +314,8 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox1</rd:DefaultName>
-          <Top>0.92287cm</Top>
-          <Left>5.18266cm</Left>
+          <Top>0.86416cm</Top>
+          <Left>3.47959cm</Left>
           <Height>0.81167cm</Height>
           <Width>7.36833cm</Width>
           <Style>
@@ -336,13 +335,10 @@
         </Border>
       </Style>
     </PageHeader>
-    <PageHeight>29.7cm</PageHeight>
-    <PageWidth>21cm</PageWidth>
-    <LeftMargin>2cm</LeftMargin>
-    <RightMargin>2cm</RightMargin>
-    <TopMargin>2cm</TopMargin>
-    <BottomMargin>2cm</BottomMargin>
-    <ColumnSpacing>0.13cm</ColumnSpacing>
+    <LeftMargin>1in</LeftMargin>
+    <RightMargin>1in</RightMargin>
+    <TopMargin>1in</TopMargin>
+    <BottomMargin>1in</BottomMargin>
     <Style />
   </Page>
   <AutoRefresh>0</AutoRefresh>
@@ -352,48 +348,56 @@
         <DataProvider>System.Data.DataSet</DataProvider>
         <ConnectString>/* Local Connection */</ConnectString>
       </ConnectionProperties>
-      <rd:DataSourceID>3fef9bc2-e6e5-40cb-bdee-7172d5772cb8</rd:DataSourceID>
+      <rd:DataSourceID>f358eb17-91cf-4d82-ba37-f7e2ac828467</rd:DataSourceID>
     </DataSource>
   </DataSources>
   <DataSets>
-    <DataSet Name="OcjenaVM">
+    <DataSet Name="UcenikVM">
       <Query>
         <DataSourceName>eDnevnikAPIModels</DataSourceName>
         <CommandText>/* Local Query */</CommandText>
       </Query>
       <Fields>
-        <Field Name="CasId">
-          <DataField>CasId</DataField>
-          <rd:TypeName>System.Int32</rd:TypeName>
-        </Field>
-        <Field Name="Datum">
-          <DataField>Datum</DataField>
+        <Field Name="Ime">
+          <DataField>Ime</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="OcjenaId">
-          <DataField>OcjenaId</DataField>
-          <rd:TypeName>System.Int32</rd:TypeName>
-        </Field>
-        <Field Name="OcjenaVrijednost">
-          <DataField>OcjenaVrijednost</DataField>
-          <rd:TypeName>System.Int32</rd:TypeName>
-        </Field>
-        <Field Name="Ucenik">
-          <DataField>Ucenik</DataField>
+        <Field Name="ImePrezime">
+          <DataField>ImePrezime</DataField>
           <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="Password">
+          <DataField>Password</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="Prezime">
+          <DataField>Prezime</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="Razred">
+          <DataField>Razred</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="RazredId">
+          <DataField>RazredId</DataField>
+          <rd:TypeName>System.Int32</rd:TypeName>
         </Field>
         <Field Name="UcenikId">
           <DataField>UcenikId</DataField>
           <rd:TypeName>System.Int32</rd:TypeName>
         </Field>
+        <Field Name="Username">
+          <DataField>Username</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
       </Fields>
       <rd:DataSetInfo>
         <rd:DataSetName>eDnevnik.API.Models</rd:DataSetName>
-        <rd:TableName>OcjenaVM</rd:TableName>
-        <rd:ObjectDataSourceType>eDnevnik.API.Models.OcjenaVM, eDnevnik.API, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</rd:ObjectDataSourceType>
+        <rd:TableName>UcenikVM</rd:TableName>
+        <rd:ObjectDataSourceType>eDnevnik.API.Models.UcenikVM, eDnevnik.API, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</rd:ObjectDataSourceType>
       </rd:DataSetInfo>
     </DataSet>
   </DataSets>
-  <rd:ReportUnitType>Cm</rd:ReportUnitType>
-  <rd:ReportID>fe0242a0-3d2b-4966-a49f-f2fdade3a135</rd:ReportID>
+  <rd:ReportUnitType>Inch</rd:ReportUnitType>
+  <rd:ReportID>d4a4e910-0b5a-485c-bad1-8111e2a10962</rd:ReportID>
 </Report>
