--- a/eDnevnik.MOBILE/eDnevnik.MOBILE/MaterijalDetalji.xaml
+++ b/eDnevnik.MOBILE/eDnevnik.MOBILE/MaterijalDetalji.xaml
@@ -4,10 +4,14 @@
              x:Class="eDnevnik.MOBILE.MaterijalDetalji">
 
     <ContentPage.Content>
-        <StackLayout>
-            <Label>Detalji</Label>
-            <Label x:Name="NazivText" Text="{Binding Naslov}" FontAttributes="Bold" FontSize="Large"></Label>
-            <Label x:Name="DatumText" Text="{Binding Datum}" FontAttributes="Bold" FontSize="Small"></Label>
+        <StackLayout Margin="15">
+            <Label x:Name="NazivText" Text="{Binding Naslov}" FontAttributes="Bold" FontSize="Medium"></Label>
+            <StackLayout Orientation="Horizontal">
+                <Label FontSize="Small"> - objavljeno </Label>
+                <Label x:Name="DatumText" Text="{Binding Datum}" FontSize="Small"></Label>
+            </StackLayout>
+            <Label FontSize="Medium">Sadrzaj: </Label>
+            <Label x:Name="SadrzajText" Text="{Binding Sadrzaj}" FontSize="Small"></Label>
             <Picker x:Name="ocjenaPicker" Title="Ocjena:" SelectedIndexChanged="ocjenaPicker_SelectedIndexChanged"></Picker>
 
             <Label>Slicni materijali</Label>
