--- a/eDnevnik.MOBILE/eDnevnik.MOBILE/RasporedCasova.xaml
+++ b/eDnevnik.MOBILE/eDnevnik.MOBILE/RasporedCasova.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="eDnevnik.MOBILE.RasporedCasova">
     <ContentPage.Content>
-        <StackLayout>
+        <StackLayout Margin="15">
 
             <Grid x:Name="rasporedCasovaGrid">
                 
