--- a/eDnevnik.MOBILE/eDnevnik.MOBILE/IzostanciPage.xaml
+++ b/eDnevnik.MOBILE/eDnevnik.MOBILE/IzostanciPage.xaml
@@ -9,20 +9,28 @@
                     <DataTemplate>
                         <ViewCell>
                             <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto"></ColumnDefinition>
-                                    <ColumnDefinition Width="Auto"></ColumnDefinition>
-                                </Grid.ColumnDefinitions>
 
-
-                                <StackLayout>
-                                    <StackLayout Orientation="Horizontal">
-                                        <Label Text="{Binding Predmet , StringFormat='{0} ('} " FontAttributes="Bold" FontSize="16" ></Label>
-                                        <Label Text="{Binding BrojSati, StringFormat='{0} )'} " FontAttributes="Bold" FontSize="16"></Label>
-                                    </StackLayout>
-                                    <Label Text="{Binding Opravdano}" ></Label>
-                                    <Label Text="{Binding Datum}" ></Label>
-                                </StackLayout>
+                                <Frame Padding="0,0,0,3">
+                                    <Frame.Content>
+                                        <Frame Padding="15,15,15,15"   OutlineColor="Gray" BackgroundColor="White">
+                                            <Frame.Content>
+                                                <StackLayout>
+                                                    <StackLayout Orientation="Horizontal">
+                                                        <Label Text="{Binding Predmet , StringFormat='{0} ('} " FontAttributes="Bold" FontSize="16" FontFamily="OpenSans-Light"
+                                                   TextColor="#69add1" ></Label>
+                                                        <Label Text="{Binding BrojSati, StringFormat='{0} )'} " FontAttributes="Bold" FontSize="16" FontFamily="OpenSans-Light"
+                                                   TextColor="#69add1"></Label>
+                                                    </StackLayout>
+                                                    <Label Text="{Binding Opravdano}" FontFamily="OpenSans-Light"
+                                                   TextColor="#69add1"></Label>
+                                                    <Label Text="{Binding Datum}" FontFamily="OpenSans-Light"
+                                                   TextColor="#69add1"></Label>
+                                                </StackLayout>
+                                            </Frame.Content>
+                                        </Frame>
+                                    </Frame.Content>
+                                </Frame>
+                                
                             </Grid>
                         </ViewCell>
                     </DataTemplate>
